--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -35,7 +35,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    background-color: var(--lightBlue);
+    background-color: var(--lightGreen);
     border: 2px solid var(--darkGreen);
     border-radius: 5px;
 }
